Fix JSON/OpenAPI mappings